--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
     <a href="lvl2/lvl2.2/task2/index.html">задача 2.2.2</a>
     <a href="lvl2/lvl2.2/task3/index.html">задача 2.2.3</a>
     <a href="lvl2/lvl2.2/task4/index.html">задача 2.2.4</a>
+    <br>
+    <a href="lvl2/lvl2.3/task1/index.html">задача 2.3.1</a>
+    <a href="lvl2/lvl2.3/task2/index.html">задача 2.3.2</a>
+    <a href="lvl2/lvl2.3/task3/index.html">задача 2.3.3</a>
+    <a href="lvl2/lvl2.3/task4/index.html">задача 2.3.4</a>
+
 
 </body>
 </html> 
