--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
     <a href="lvl2/lvl2.3/task2/index.html">задача 2.3.2</a>
     <a href="lvl2/lvl2.3/task3/index.html">задача 2.3.3</a>
     <a href="lvl2/lvl2.3/task4/index.html">задача 2.3.4</a>
+    <br>
+    <a href="lvl2/lvl2.4/task1/index.html">задача 2.4.1</a>
 
 
 </body>
