--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
     <a href="lvl2/lvl2.3/task4/index.html">задача 2.3.4</a>
     <br>
     <a href="lvl2/lvl2.4/task1/index.html">задача 2.4.1</a>
+    <a href="lvl2/lvl2.4/task1/index.html">задача 2.4.2</a>
+    <a href="lvl2/lvl2.4/task1/index.html">задача 2.4.3</a>
+    <a href="lvl2/lvl2.4/task1/index.html">задача 2.4.4</a>
+    <a href="lvl2/lvl2.4/task1/index.html">задача 2.4.5</a>
+
 
 
 </body>
