--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
     <a href="lvl2/lvl2.4/task1/index.html">задача 2.4.3</a>
     <a href="lvl2/lvl2.4/task1/index.html">задача 2.4.4</a>
     <a href="lvl2/lvl2.4/task1/index.html">задача 2.4.5</a>
-
+    <br>
+    <a href="lvl2/lvl2.5/task1/index.html">задача 2.5.1</a>
 
 
 </body>
