--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
     <a href="lvl2/lvl2.4/task1/index.html">задача 2.4.5</a>
     <br>
     <a href="lvl2/lvl2.5/task1/index.html">задача 2.5.1</a>
+    <a href="lvl2/lvl2.5/task2/index.html">задача 2.5.2</a>
+    <a href="lvl2/lvl2.5/task3/index.html">задача 2.5.3</a>
 
 
 </body>
