--- a/index.html
+++ b/index.html
@@ -83,6 +83,18 @@
     <a href="lvl2/lvl2.5/task1/index.html">задача 2.5.1</a>
     <a href="lvl2/lvl2.5/task2/index.html">задача 2.5.2</a>
     <a href="lvl2/lvl2.5/task3/index.html">задача 2.5.3</a>
+    <br>
+    <a href="lvl2/lvl2.6/task1/index.html">задача 2.6.1</a>
+    <a href="lvl2/lvl2.6/task2/index.html">задача 2.6.2</a>
+    <a href="lvl2/lvl2.6/task3/index.html">задача 2.6.3</a>
+    <a href="lvl2/lvl2.6/task4/index.html">задача 2.6.4</a>
+    <a href="lvl2/lvl2.6/task5/index.html">задача 2.6.5</a>
+    <a href="lvl2/lvl2.6/task6/index.html">задача 2.6.6</a>
+    <br>
+    <a href="lvl2/lvl2.7/task1/index.html">задача 2.7.1</a>
+    <a href="lvl2/lvl2.7/task2/index.html">задача 2.7.2</a>
+    <a href="lvl2/lvl2.7/task3/index.html">задача 2.7.3</a>
+
 
 
 </body>
