--- a/index.html
+++ b/index.html
@@ -94,6 +94,18 @@
     <a href="lvl2/lvl2.7/task1/index.html">задача 2.7.1</a>
     <a href="lvl2/lvl2.7/task2/index.html">задача 2.7.2</a>
     <a href="lvl2/lvl2.7/task3/index.html">задача 2.7.3</a>
+    <br>
+    <a href="lvl2/lvl2.8/task1/index.html">задача 2.8.1</a>
+    <a href="lvl2/lvl2.8/task2/index.html">задача 2.8.2</a>
+    <a href="lvl2/lvl2.8/task3/index.html">задача 2.8.3</a>
+    <br>
+    <a href="lvl2/lvl2.9/task1/index.html">задача 2.9.1</a>
+    <a href="lvl2/lvl2.9/task2/index.html">задача 2.9.2</a>
+    <br>
+    <a href="lvl2/lvl2.10/task1/index.html">задача 2.10.1</a>
+    <a href="lvl2/lvl2.10/task2/index.html">задача 2.10.2</a>
+    <a href="lvl2/lvl2.10/task3/index.html">задача 2.10.3</a>
+    <a href="lvl2/lvl2.10/task4/index.html">задача 2.10.4</a>
 
 
 
