--- a/index.html
+++ b/index.html
@@ -106,6 +106,12 @@
     <a href="lvl2/lvl2.10/task2/index.html">задача 2.10.2</a>
     <a href="lvl2/lvl2.10/task3/index.html">задача 2.10.3</a>
     <a href="lvl2/lvl2.10/task4/index.html">задача 2.10.4</a>
+    <br>
+    <a href="lvl3/lvl3.1/task1/index.html">задача 3.1.1</a>
+    <a href="lvl3/lvl3.1/task2/index.html">задача 3.1.2</a>
+    <a href="lvl3/lvl3.1/task3/index.html">задача 3.1.3</a>
+    <a href="lvl3/lvl3.1/task4/index.html">задача 3.1.4</a>
+
 
 
 
