--- a/index.html
+++ b/index.html
@@ -111,6 +111,29 @@
     <a href="lvl3/lvl3.1/task2/index.html">задача 3.1.2</a>
     <a href="lvl3/lvl3.1/task3/index.html">задача 3.1.3</a>
     <a href="lvl3/lvl3.1/task4/index.html">задача 3.1.4</a>
+    <br>
+    <a href="lvl3/lvl3.2/task1/index.html">задача 3.2.1</a>
+    <a href="lvl3/lvl3.2/task2/index.html">задача 3.2.2</a>
+    <a href="lvl3/lvl3.2/task3/index.html">задача 3.2.3</a>
+    <a href="lvl3/lvl3.2/task4/index.html">задача 3.2.4</a>
+    <a href="lvl3/lvl3.2/task5/index.html">задача 3.2.5</a>
+    <br>
+    <a href="lvl3/lvl3.3/task1/index.html">задача 3.3.1</a>
+    <a href="lvl3/lvl3.3/task2/index.html">задача 3.3.2</a>
+    <a href="lvl3/lvl3.3/task3/index.html">задача 3.3.3</a>
+    <a href="lvl3/lvl3.3/task4/index.html">задача 3.3.4</a>
+    <br>
+    <a href="lvl3/lvl3.4/task1/index.html">задача 3.4.1</a>
+    <a href="lvl3/lvl3.4/task2/index.html">задача 3.4.2</a>
+    <a href="lvl3/lvl3.4/task3/index.html">задача 3.4.3</a>
+    <br>
+    <a href="lvl3/lvl3.5/task1/index.html">задача 3.5.1</a>
+    <a href="lvl3/lvl3.5/task2/index.html">задача 3.5.2</a>
+    <a href="lvl3/lvl3.5/task3/index.html">задача 3.5.3</a>
+    <a href="lvl3/lvl3.5/task4/index.html">задача 3.5.4</a>
+    <a href="lvl3/lvl3.5/task5/index.html">задача 3.5.5</a>
+    <a href="lvl3/lvl3.6/task5/index.html">задача 3.5.6</a>
+    <a href="lvl3/lvl3.7/task5/index.html">задача 3.5.7</a>
 
 
 
